--- a/sudoku-ui/src/index.html
+++ b/sudoku-ui/src/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Sudoku Solver</title>
+  <title>Sudoku Solver - Algorithm Visualization</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Compare multiple Sudoku solving algorithms in real-time. Watch step-by-step visualization of different solving strategies.">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
