--- a/sudoku-ui/src/index.html
+++ b/sudoku-ui/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Compare multiple Sudoku solving algorithms in real-time. Watch step-by-step visualization of different solving strategies.">
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
