updated favicon to work

--- a/sudoku-ui/src/index.html
+++ b/sudoku-ui/src/index.html
@@ -6,8 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Compare multiple Sudoku solving algorithms in real-time. Watch step-by-step visualization of different solving strategies.">
-  <link rel="icon" type="image/svg+xml" href="favicon.svg">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🔢</text></svg>">
 </head>
 <body>
   <app-root></app-root>
