--- a/sudoku-ui/src/index.html
+++ b/sudoku-ui/src/index.html
@@ -4,7 +4,10 @@
   <meta charset="utf-8">
   <title>Sudoku Solver - Algorithm Visualization</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="description" content="Compare multiple Sudoku solving algorithms in real-time. Watch step-by-step visualization of different solving strategies.">
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🔢</text></svg>">
 </head>
